[package]
name = "tic_tac_toe"
version = "0.1.0"
edition = "2021"
authors = ["[object Object] <whaledev.contact@gmail.com>"]
license = "MIT"
description = "A simple terminal based Tic-Tac-Toe game."
readme = "README.md"
homepage = "https://github.com/0bject-0bject/TicTacToe"
repository = "https://github.com/0bject-0bject/TicTacToe"
keywords = ["game"]

[dependencies]
enable-ansi-support = "0.2.1"